--- a/src/index.css
+++ b/src/index.css
@@ -3,4 +3,6 @@
 @tailwind utilities;
 
 :root { color-scheme: dark; }
-body { @apply bg-base text-text; }
+body { @apply bg-base text-text; 
+    font-family: 'Inter', sans-serif; }
+
